# mike-t-nmpf-event-orgnization

./: .env.example  .gitignore  .plan  .prettierignore  PRODUCT.md  README.md  clippy.toml  rustfmt.toml
backend/: Cargo.toml
backend/apps/api/: Cargo.toml
backend/apps/api/migrations/: 20260517184500_initial_schema.sql  20260517192000_create_users.sql  20260517195500_create_refresh_tokens.sql  20260517201000_create_email_verification_tokens.sql  20260517203000_create_password_reset_tokens.sql  20260517215500_create_event_images.sql  20260517224500_create_events.sql  20260523071500_create_registrations.sql  20260523075500_create_registration_reminders.sql
backend/apps/api/src/: app.rs  auth.rs  auth_middleware.rs  config.rs  database.rs  email.rs  email_verification.rs  error.rs  event_images.rs  events.rs  extract.rs  logging.rs  main.rs  object_storage.rs  password_reset.rs  refresh_tokens.rs  registrations.rs  reminders.rs  shutdown.rs  users.rs
deploy/: ENVIRONMENT.md
deploy/nginx/: event-organization.conf
frontend/: components.json  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/e2e/: event-flow.spec.ts
frontend/src/: App.tsx  index.css  styles.css
frontend/src/app/: providers.tsx  router.tsx
frontend/src/components/: error-boundary.tsx  protected-route.tsx  root-layout.tsx  route-card.tsx  route-error-page.tsx  state-panels.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/lib/: api-client.ts  config.ts
frontend/src/pages/: attendee-page.tsx  auth-page.tsx  event-detail-page.tsx  forgot-password-page.tsx  home-page.tsx  host-event-attendees-page.tsx  host-event-form-page.tsx  host-page.tsx  login-page.tsx  not-found-page.tsx  profile-page.tsx  register-page.tsx  reset-password-page.tsx  verify-email-page.tsx
frontend/src/stores/: app-store.ts  auth-store.ts
scripts/: build-backend-release.sh  build-frontend-bundle.sh
