[package]
name = "event-organization-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum = { version = "0.8.1", features = ["http1", "json", "tokio"] }
http = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["compression-full", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[[bin]]
name = "event-organization-api"
path = "src/main.rs"
