[package]
name = "event-organization-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aws-config = "1.8.8"
aws-credential-types = "1.2.8"
aws-sdk-s3 = "1.115.0"
axum = { version = "0.8.1", features = ["http1", "json", "tokio"] }
envy = "0.4.2"
http = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["compression-full", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
validator = { version = "0.20.0", features = ["derive"] }

[[bin]]
name = "event-organization-api"
path = "src/main.rs"
