[package]
name = "event-organization-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
argon2 = "0.5.3"
aws-config = "1.8.8"
aws-credential-types = "1.2.8"
aws-sdk-s3 = "1.115.0"
axum = { version = "0.8.1", features = ["http1", "json", "tokio"] }
chrono = { version = "0.4.39", features = ["serde"] }
envy = "0.4.2"
http = "1.2.0"
jsonwebtoken = "9.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["compression-full", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[[bin]]
name = "event-organization-api"
path = "src/main.rs"
